; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_c-qcam.c_qcam_exclusive_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_c-qcam.c_qcam_exclusive_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.video_device = type { i32 }
%struct.qcam_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*)* @qcam_exclusive_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qcam_exclusive_release(%struct.file* %0) #0 {
  %2 = alloca %struct.file*, align 8
  %3 = alloca %struct.video_device*, align 8
  %4 = alloca %struct.qcam_device*, align 8
  store %struct.file* %0, %struct.file** %2, align 8
  %5 = load %struct.file*, %struct.file** %2, align 8
  %6 = call %struct.video_device* @video_devdata(%struct.file* %5)
  store %struct.video_device* %6, %struct.video_device** %3, align 8
  %7 = load %struct.video_device*, %struct.video_device** %3, align 8
  %8 = bitcast %struct.video_device* %7 to %struct.qcam_device*
  store %struct.qcam_device* %8, %struct.qcam_device** %4, align 8
  %9 = load %struct.qcam_device*, %struct.qcam_device** %4, align 8
  %10 = getelementptr inbounds %struct.qcam_device, %struct.qcam_device* %9, i32 0, i32 0
  %11 = call i32 @clear_bit(i32 0, i32* %10)
  ret i32 0
}

declare dso_local %struct.video_device* @video_devdata(%struct.file*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
